--- a/forgetIT/.classpath
+++ b/forgetIT/.classpath
@@ -4,5 +4,15 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/hibernate3/hibernate3.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3/lib/required/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3/lib/required/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3/lib/required/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3/lib/required/javassist-3.12.0.GA.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3/lib/required/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3/lib/required/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3/lib/jpa/hibernate-jpa-2.0-api-1.0.0.Final.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.swt"/>
+	<classpathentry kind="lib" path="lib/sqljet/sqljet.1.0.3.b914.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
