--- a/forgetIT/.project
+++ b/forgetIT/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.swt</name>
+	<name>forgetIT</name>
 	<comment></comment>
 	<projects>
 	</projects>
